# OBL_Project

./: .gitignore  CMakeLists.txt  README.md
docs/: _company_input_dialog_8cpp.html  _company_input_dialog_8h.html  _company_input_dialog_8h.js  _company_profile_8cpp.html  _company_profile_8h.html  _database_manager_8cpp.html  _database_manager_8h.js  _database_manager_8h_source.html  _history_widget_8cpp.html  _history_widget_8h.html  _history_widget_8h.js  _history_widget_8h_source.html  _json_serializer_8h.html  _json_serializer_8h.js  _json_serializer_8h_source.html  _main_window_8h.html  _network_analyzer_8cpp.html  _network_proposal_8cpp.html  _network_result_widget_8h.html  _prompt_builder_8cpp.html  _prompt_builder_8h.html  _prompt_builder_8h.js  _prompt_builder_8h_source.html  _stats_view_8cpp.html  _stats_view_8h.html  _stats_view_8h_source.html  class_database_manager.html  class_database_worker-members.html  class_database_worker.html  class_database_worker.js  class_history_widget-members.html  class_history_widget.js  class_json_serializer-members.html  class_json_serializer.js  class_main_window-members.html  class_network_analyzer.html  class_network_proposal-members.html  class_ollama_client-members.html  class_ollama_client.html  class_prompt_builder.html  (+17 more)
docs/html/: _company_input_dialog_8h_source.html  _company_profile_8h.js  _company_profile_8h_source.html  _database_manager_8h.html  _json_serializer_8cpp.html  _main_window_8cpp.html  _main_window_8h_source.html  _network_analyzer_8h.html  _network_analyzer_8h.js  _network_analyzer_8h_source.html  _network_proposal_8h.html  _network_proposal_8h.js  _network_proposal_8h_source.html  _network_result_widget_8cpp.html  _network_result_widget_8h_source.html  _ollama_client_8cpp.html  _ollama_client_8h.html  _ollama_client_8h_source.html  _stats_view_8h.js  annotated.html  annotated_dup.js  class_company_input_dialog-members.html  class_company_input_dialog.html  class_company_input_dialog.js  class_database_manager-members.html  class_database_manager.js  class_history_widget.html  class_json_serializer.html  class_main_window.html  class_main_window.js  class_network_analyzer-members.html  class_network_analyzer.js  class_network_proposal.html  class_network_proposal.js  class_ollama_client.js  class_prompt_builder-members.html  class_prompt_builder.js  class_stats_view-members.html  dir_452baf35e1d7639c9f2a5ece4ec85855.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+13 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_7.js  all_b.js  all_d.js  all_e.js  classes_2.js  classes_3.js  classes_8.js  files_2.js  files_3.js  files_5.js  functions_1.js  functions_3.js  functions_5.js  functions_7.js  functions_9.js  functions_b.js  functions_e.js  functions_f.js  searchdata.js  variables_4.js  variables_5.js  variables_9.js  variables_a.js
docs/latex/: _company_input_dialog_8cpp.tex  _company_input_dialog_8h.tex  _company_input_dialog_8h_source.tex  _company_profile_8cpp.tex  _company_profile_8h.tex  _company_profile_8h_source.tex  _database_manager_8cpp.tex  _database_manager_8h.tex  _database_manager_8h_source.tex  _history_widget_8cpp.tex  _history_widget_8h.tex  _history_widget_8h_source.tex  _json_serializer_8cpp.tex  _json_serializer_8h.tex  _json_serializer_8h_source.tex  _main_window_8cpp.tex  _main_window_8h.tex  _main_window_8h_source.tex  _network_analyzer_8cpp.tex  _network_analyzer_8h.tex  _network_analyzer_8h_source.tex  _network_proposal_8cpp.tex  _network_proposal_8h.tex  _network_proposal_8h_source.tex  _network_result_widget_8cpp.tex  _network_result_widget_8h.tex  _network_result_widget_8h_source.tex  _ollama_client_8cpp.tex  _ollama_client_8h.tex  _ollama_client_8h_source.tex  _prompt_builder_8cpp.tex  _prompt_builder_8h.tex  _prompt_builder_8h_source.tex  _stats_view_8cpp.tex  _stats_view_8h.tex  _stats_view_8h_source.tex  annotated.tex  class_company_input_dialog.eps  class_company_input_dialog.tex  class_database_manager.tex  (+24 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_f.js  classes_0.js  classes_1.js  classes_5.js  files_0.js  files_8.js  functions_0.js  functions_10.js  functions_11.js  functions_13.js  functions_2.js  functions_4.js  functions_8.js  functions_c.js  functions_d.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_6.js  variables_7.js  variables_8.js
src/: main.cpp
src/core/: CompanyProfile.h  NetworkAnalyzer.cpp  NetworkAnalyzer.h  NetworkProposal.cpp  NetworkProposal.h
src/gui/: CompanyInputDialog.cpp  CompanyInputDialog.h  CompanyInputDialog.ui  HistoryWidget.cpp  HistoryWidget.h  MainWindow.cpp  MainWindow.ui  StatsView.cpp  StatsView.h  mainwindow.h
src/llm/: OllamaClient.cpp  OllamaClient.h  PromptBuilder.cpp  PromptBuilder.h
src/storage/: DatabaseManager.cpp  DatabaseManager.h  JsonSerializer.cpp  JsonSerializer.h
tests/: CMakeLists.txt  TestAnalyzer.cpp  TestAnalyzer.h
